--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Todo</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header class="header">
+      <h1>Todo</h1>
+    </header>
+    <div class="main-container">
+      <form action="#" class="form">
+        <input type="text" placeholder="Create a new todo..." />
+        <button type="submit">Enter todo</button>
+        <!-- <input type="submit" value="Enter Todo" /> -->
+      </form>
+      <div class="todolist-container">
+        <h1>Todo List:</h1>
+        <ul class="todo-list">
+          <!--Insert Javascript Code  -->
+        </ul>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <h2>&COPY; Robert & Liz Project</h2>
+    </footer>
     
-</body>
+  </body>
+  <script src="app.js"></script>
 </html>
