input styling changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div class="main-container">
       <form action="#" class="form">
         <input type="text" placeholder="Create a new todo..." />
-        <button type="submit">Enter todo</button>
         <!-- <input type="submit" value="Enter Todo" /> -->
       </form>
       <div class="todolist-container">
@@ -23,11 +22,13 @@
           <!--Insert Javascript Code  -->
         </ul>
       </div>
+      
     </div>
+    <!-- <footer class="footer">
+        <h2>&COPY; Robert & Liz Project</h2>
+      </footer> -->
 
-    <footer class="footer">
-      <h2>&COPY; Robert & Liz Project</h2>
-    </footer>
+  
     
   </body>
   <script src="app.js"></script>
