--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </form>
       <div class="todolist-container">
         <h1>Todo List:</h1>
-        <ul class="todo-list">
+        <ul class="todo-list" id="todoList">
           <!--Insert Javascript Code  -->
         </ul>
       </div>
